Fix Special:ManageCA crash and improve mobile bullet alignment
- Replace 'Xml::escapeJsString' with 'json_encode' in 'SpecialManageCA.php' to fix 'undefined method' fatal error.
- Adjust '.mca-info-box ul' mobile CSS to align bullet points with headers using 'list-style-position: inside'.

--- a/extensions/MultiCentralAuth/resources/main.less
+++ b/extensions/MultiCentralAuth/resources/main.less
@@ -82,7 +82,8 @@ input[name="delete_selected"] {
 	.mca-info-box {
 		ul {
 			margin-left: 0 !important;
-			padding-left: 1.2em !important;
+			padding-left: 0 !important;
+			list-style-position: inside !important;
 		}
 	}
 }
